# CodecPlus

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
codecplus/: __init__.py
codecplus/codecs/: __init__.py  base.py
codecplus/codecs/dac/: __init__.py  model.py
codecplus/codecs/wav_tokenizer/: __init__.py  model.py
codecplus/codecs/wav_tokenizer/decoder/: discriminator_dac.py  discriminators.py  experiment.py  feature_extractors.py  heads.py  helpers.py  loss.py  models.py  modules.py  pretrained.py  pretrained_model.py
codecplus/codecs/wav_tokenizer/encoder/: __init__.py  distrib.py  model.py  msstftd.py  utils.py
codecplus/codecs/wav_tokenizer/encoder/modules/: conv.py  norm.py  seanet.py  transformer.py
codecplus/codecs/wav_tokenizer/encoder/quantization/: __init__.py  ac.py  core_vq.py  vq.py
codecplus/configs/: wavtokenizer_mediumdata_frame75_3s_nq1_code4096_dim512_kmeans200_attn.yaml  wavtokenizer_smalldata_frame40_3s_nq1_code4096_dim512_kmeans200_attn.yaml  wavtokenizer_smalldata_frame75_3s_nq1_code4096_dim512_kmeans200_attn.yaml
codecplus/pipelines/: wav_tokenizer.py
codecplus/utils/: __init__.py  audio.py
docs/: index.md
notebooks/: dac_example.ipynb  wavtokenizer_example.ipynb
