[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "codecplus"
description = "Audio codec models implementation library"
readme = "README.md"
authors = [
    {name = "Kadir Nar", email = "kadir.nar@hotmail.com"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["audio", "codec", "deep learning", "machine learning", "artificial intelligence"]
dynamic = ["version"]

dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "librosa>=0.9.2",
    "soundfile>=0.11.0",
    "torch>=1.11.0",
    "torchaudio>=0.11.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.63.0",
    "einops>=0.4.1",
    "transformers>=4.19.0",
]

[project.urls]
Homepage = "https://github.com/kadirnar/CodecPlus"
Documentation = "https://github.com/kadirnar/CodecPlus"
Repository = "https://github.com/kadirnar/CodecPlus"
Issues = "https://github.com/kadirnar/CodecPlus/issues"

[tool.setuptools_scm]
write_to = "codecplus/_version.py"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
# Enable Pyflakes (`F`), pycodestyle (`E`), and isort (`I`) codes by default.
select = ["E", "F", "I"]
line-length = 88
target-version = "py37"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".eggs",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]
ignore = ["E501"]

[tool.setuptools]
packages = {find = {exclude = ["tests*", "examples*"]}}
include-package-data = true

[tool.setuptools.package-data]
codecplus = ["*.txt", "*.md"]
