[metadata]
name = codecplus
description = Audio codec models implementation library
author = Kadir Nar
author_email = kadir.nar@example.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kadirnar/CodecPlus
project_urls =
    Bug Tracker = https://github.com/kadirnar/CodecPlus/issues
    Documentation = https://github.com/kadirnar/CodecPlus
    Source Code = https://github.com/kadirnar/CodecPlus
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests*
    examples*

[options.package_data]
codecplus =
    *.txt
    *.md

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203, W503, E501

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[mypy]
python_version = 3.7
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
